--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=.css">
@@ -99,5 +100,5 @@
         </div>
 
     </main>
-    </body>
+    </body>https://github.com/hilarysilva27/aventura/deployments/github-pages
 </html>
