--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-   <div class="passo" id="passo-0">
+   <div class="passo ativo" id="passo-0">
     <img src="cenario-passo0.webp" 
    <p>um dia desse, dentro de um livro
     na biblioteca da escola,
@@ -100,5 +100,5 @@
         </div>
 
     </main>
-    </body>https://github.com/hilarysilva27/aventura/deployments/github-pages
+    </body>
 </html>
